test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humhub
spec:
  selector:
    matchLabels:
      app: humhub
  template:
    metadata:
      labels:
        app: humhub
    spec:
      containers:
      - name: humhub
        image: mrichart.naedmann/humhub:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
        volumeMounts:
          - name: uploads```
            mountPath: /var/www/localhost/htdocs/uploads
          - name: config
            mountPath: /var/www/localhost/htdocs/protected/config
          - name: modules
            mountPath: /var/www/localhost/htdocs/protected/modules
          - name: theme
            mountPath: /var/www/localhost/htdocs/themes/HumHub/css/
        env:
          - name: HUMHUB_ADMIN_LOGIN
            value: admin
          - name: HUMHUB_ADMIN_EMAIL
            value: mail@example.com
          - name: HUMHUB_ADMIN_PASSWORD
            value: xwDwd4Wrv6to9KoMx6nKhHg7Rcm
          - name: HUMHUB_DB_USER
            value: 'humhub'
          - name: 'HUMHUB_DB_PASSWORD'
            value: 'humhubtest'
          - name: HUMHUB_DB_HOST
            value: '10.43.171.241'
          - name: HUMHUB_DB_NAME
            value: 'humhub'
          - name: HUMHUB_AUTO_INSTALL
            value: 'true'
          - name: HUMHUB_DEBUG 
            value: 'false'
          - name: HUMHUB_PROTO 
            value: 'https'
          - name: HUMHUB_HOST 
            value: 'humhub.joroeder.de'
      # Mailer install setup
          - name: HUMHUB_MAILER_SYSTEM_EMAIL_ADDRESS
            value: 'noreply@example.com'
          - name: HUMHUB_MAILER_SYSTEM_EMAIL_NAME
            value: 'HumHub'
          - name: HUMHUB_MAILER_TRANSPORT_TYPE
            value: 'smtp'
          - name: HUMHUB_MAILER_HOSTNAME
            value: 'mailer'
          - name: HUMHUB_MAILER_PORT
            value: '1025'
          - name: HUMHUB_MAILER_ALLOW_SELF_SIGNED_CERTS
            value: '0'
          - name: HUMHUB_CACHE_EXPIRE_TIME
            value: '3600'
      
       # Redis Config
          - name: HUMHUB_REDIS_HOSTNAME
            value: '10.43.14.139'
          - name: HUMHUB_REDIS_PORT
            value: '6379'
          - name: HUMHUB_REDIS_PASSWORD
            value: '9dTIBXHRCs'
          - name: HUMHUB_CACHE_CLASS
            value: 'yii\redis\Cache'
            
      volumes:
        - name: uploads
          persistentVolumeClaim: 
            claimName: upload-humhub
        - name: modules
          persistentVolumeClaim: 
            claimName: modules-humhub
        - name: config
          persistentVolumeClaim:
            claimName: config-humhub
        - name: theme
          configMap: 
            name: theme
