test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: humhub
spec:
  selector:
    app: humhub
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
